<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryDark"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="@dimen/margin_top_login_text"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_login_text"
        android:layout_marginTop="@dimen/margin_top_login_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_login_text"
        android:layout_marginTop="@dimen/margin_top_login_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/mail"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:text="@string/login_msg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="160dp"
        android:text="@string/login_question"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="160dp"
        android:clickable="true"
        android:text="@string/register_request"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="93dp"
        android:layout_height="83dp"
        android:layout_marginStart="@dimen/logo_position_left"
        android:layout_marginTop="@dimen/logo_position_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_without_text_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>