<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/changeProfile"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="119dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/change_profile"
        app:layout_constraintBottom_toTopOf="@+id/showAll"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showAll"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/your_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="103dp"
        android:layout_height="87dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/ic_default_profile" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="@dimen/profile_left"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/profile_left"
        android:layout_marginTop="20dp"
        android:text="@string/phone"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/profile_left"
        android:layout_marginTop="@dimen/profile_top"
        android:text="@string/mail"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="190dp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="@dimen/profile_top"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/mailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="@dimen/profile_top"

        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

    <include
        android:id="@+id/include"
        layout="@layout/header" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_profile"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        android:background="@drawable/button"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showAll" />


</androidx.constraintlayout.widget.ConstraintLayout>