<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeProfileActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/header" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_left"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_left"
        android:layout_marginTop="@dimen/profile_top"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_left"
        android:layout_marginTop="@dimen/change_profile_distance"
        android:text="@string/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/mailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_left"
        android:layout_marginTop="@dimen/profile_top"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="@dimen/change_profile_distance"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_left"
        android:layout_marginTop="@dimen/profile_top"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/profile_left"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="103dp"
        android:layout_height="87dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:srcCompat="@drawable/ic_default_profile" />

    <Button
        android:id="@+id/cancleButton"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/cancle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>