<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryDark"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="93dp"
        android:layout_height="83dp"
        android:layout_marginStart="@dimen/logo_position_left"
        android:layout_marginTop="@dimen/logo_position_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_without_text_foreground" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_login_text"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgrey"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_login_text"
        android:layout_marginTop="@dimen/margin_top_login_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgrey"
        android:textCursorDrawable="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_login_text"
        android:layout_marginTop="@dimen/margin_top_login_text"
        android:ems="10"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgrey"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="@dimen/margin_top_login_text"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>