<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/header" />

    <Button
        android:id="@+id/wantToHelpButton"
        android:layout_width="157dp"
        android:layout_height="55dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="213dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/want_to_help"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <Button
        android:id="@+id/needHelpButton"
        android:layout_width="157dp"
        android:layout_height="55dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/need_help"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wantToHelpButton" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:text="@string/open_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="25dp"
        android:text="@string/done_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openTaskTextView" />

    <TextView
        android:id="@+id/openTaskTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="201dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:text="0" />

    <TextView
        android:id="@+id/doneTaskTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="201dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:text="0" />

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="366dp"
        android:layout_height="212dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needHelpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>