<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".NeedHelpActivity">


    <include
        android:id="@+id/include6"
        layout="@layout/header" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:entries="@array/categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="53dp"
        android:text="@string/need_help_q1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include6" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/need_help_q2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorPrimary"
        app:background="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        app:counterEnabled="true"
        app:counterMaxLength="250"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:colorControlActivated="@color/colorPrimary"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="250"
            app:backgroundTint="@color/colorPrimary"
            app:colorControlActivated="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>